# rust-client

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  install.sh
crates/lpm-auth/: Cargo.toml
crates/lpm-auth/src/: lib.rs  session.rs
crates/lpm-cert/: Cargo.toml
crates/lpm-cert/src/: ca.rs  cert.rs  framework.rs  lib.rs  paths.rs  trust.rs
crates/lpm-cli/: Cargo.toml
crates/lpm-cli/src/: auth.rs  build_state.rs  capability.rs  constraints.rs  editor_skills.rs  global_blocked_set.rs  graph_render.rs  import_rewriter.rs  install_state.rs  intelligence.rs  main.rs  manifest_tx.rs  migration_warnings.rs  oidc.rs  output.rs  overrides_state.rs  patch_engine.rs  patch_state.rs  path_onboarding.rs  precedence.rs  prompt.rs  provenance.rs  provenance_fetch.rs  quality.rs  release_age_config.rs  save_config.rs  save_spec.rs  script_policy_config.rs  security_check.rs  sigstore.rs  swift_manifest.rs  test_env.rs  trust_snapshot.rs  update_check.rs  upgrade_engine.rs  version_diff.rs  xcode_project.rs
crates/lpm-cli/src/commands/: add.rs  approve_builds.rs  approve_scripts.rs  audit.rs  build.rs  cache.rs  cert.rs  ci.rs  config.rs  deploy.rs  dev.rs  doctor.rs  download.rs  env.rs  filter.rs  global.rs  graph.rs  health.rs  info.rs  init.rs  install.rs  install_global.rs  install_targets.rs  login.rs  logout.rs  mcp.rs  migrate.rs  mod.rs  npmrc.rs  outdated.rs  patch.rs  plugin.rs  pool.rs  ports.rs  publish.rs  publish_common.rs  publish_npm.rs  quality.rs  (+21 more)
crates/lpm-cli/tests/: add_path_traversal_dest_escape.rs  add_simple_non_interactive_without_path.rs  add_source_npm_simple.rs  approve_builds_audit_regression.rs  approve_scripts_audit_regression.rs  global_phase37_e2e.rs  npmrc_phase58_e2e.rs  overrides_phase5_regression.rs  p46_close_allow_widening_reference.rs  p46_close_dry_run_reference.rs  p46_close_policy_deny_baseline.rs  p6_triage_autoexec_reference.rs  p7_version_diff_reference.rs  patch_phase6_regression.rs  phase59_round6_freshness_and_offline_e2e.rs  phase59_round7_alias_and_ghost_e2e.rs  phase59_transitive_non_registry_e2e.rs  phase59_workspace_root_symlinks_e2e.rs  phase59_workspace_transitive_e2e.rs  phase59_workspace_transitive_membership_e2e.rs  provenance_drift_p4_ship_criteria.rs  release_age_p3_ship_criteria.rs  strict_ssl_warning.rs  upgrade_phase7_regression.rs
crates/lpm-common/: Cargo.toml
crates/lpm-common/src/: error.rs  integrity.rs  lib.rs  package_name.rs  paths.rs
crates/lpm-dashboard/: Cargo.toml
crates/lpm-dashboard/src/: app.rs  lib.rs  log_buffer.rs  ui.rs
crates/lpm-env/: Cargo.toml
crates/lpm-env/src/: example.rs  inheritance.rs  lib.rs  print.rs  resolver.rs  schema.rs  validate.rs
crates/lpm-extractor/: Cargo.toml
crates/lpm-extractor/src/: lib.rs
crates/lpm-global/: Cargo.toml
crates/lpm-global/src/: install_root.rs  lib.rs  manifest.rs  recover.rs  shim.rs  sweep.rs  trusted_deps.rs  wal.rs
crates/lpm-inspect/: Cargo.toml
crates/lpm-inspect/src/: api.rs  db.rs  diff.rs  export.rs  failure.rs  inspector_ui.html  lib.rs  redact.rs  replay.rs  server.rs  snapshot.rs  sse.rs  state.rs  tests.rs  ui.rs
crates/lpm-linker/: Cargo.toml
crates/lpm-linker/src/: lib.rs
crates/lpm-lockfile/: Cargo.toml
crates/lpm-lockfile/benches/: lockfile.rs
crates/lpm-lockfile/src/: binary.rs  lib.rs  source.rs
crates/lpm-migrate/: Cargo.toml
crates/lpm-migrate/src/: backup.rs  bun.rs  ci.rs  detect.rs  lib.rs  normalize.rs  npm.rs  pnpm.rs  validate.rs  yarn.rs
crates/lpm-network/: Cargo.toml
crates/lpm-network/src/: firewall.rs  interfaces.rs  lib.rs  qr.rs  vpn.rs
crates/lpm-plugin/: Cargo.toml
crates/lpm-plugin/src/: download.rs  lib.rs  registry.rs  store.rs  versions.rs
crates/lpm-registry/: Cargo.toml
crates/lpm-registry/src/: client.rs  lib.rs  npmrc.rs  route.rs  timing.rs  types.rs
crates/lpm-registry/tests/: cafile_strict_ssl.rs
crates/lpm-resolver/: Cargo.toml
crates/lpm-resolver/src/: greedy.rs  lib.rs  npm_version.rs  overrides.rs  package.rs  profile.rs  provider.rs  ranges.rs  resolve.rs  specifier.rs  streaming.rs  walker.rs
crates/lpm-resolver/tests/: parse_metadata_public_api.rs
crates/lpm-runner/: Cargo.toml
crates/lpm-runner/src/: bin_path.rs  dag.rs  dlx.rs  dotenv.rs  exec.rs  hooks.rs  isolate.rs  lib.rs  lpm_json.rs  orchestrator.rs  ports.rs  ready.rs  script.rs  service_graph.rs  shell.rs  task_graph.rs
crates/lpm-runtime/: Cargo.toml
crates/lpm-runtime/src/: detect.rs  download.rs  lib.rs  node.rs  platform.rs
crates/lpm-sandbox/: Cargo.toml
crates/lpm-sandbox/benches/: sandbox_spawn.rs
crates/lpm-sandbox/src/: config.rs  landlock_rules.rs  lib.rs  linux.rs  macos.rs  seatbelt.rs
crates/lpm-sandbox/tests/: compat_greens.rs  escape_corpus.rs
crates/lpm-security/: Cargo.toml
crates/lpm-security/benches/: behavioral.rs
crates/lpm-security/src/: lib.rs  provenance.rs  query.rs  script_hash.rs  skill_security.rs  static_gate.rs  triage.rs  typosquatting.rs
crates/lpm-security/tests/: static_gate_corpus.rs
crates/lpm-semver/: Cargo.toml
crates/lpm-semver/src/: lib.rs  version.rs  version_req.rs
crates/lpm-store/: Cargo.toml
crates/lpm-store/src/: lib.rs
crates/lpm-task/: Cargo.toml
crates/lpm-task/src/: affected.rs  cache.rs  graph.rs  hasher.rs  lib.rs  watch.rs
crates/lpm-task/tests/: filter_e2e.rs
crates/lpm-tunnel/: Cargo.toml
crates/lpm-tunnel/src/: client.rs  lib.rs  protocol.rs  proxy.rs  webhook.rs  webhook_buffer.rs  webhook_log.rs  webhook_replay.rs  webhook_signature.rs  ws_capture.rs
crates/lpm-vault/: Cargo.toml
crates/lpm-vault/src/: crypto.rs  fallback.rs  keychain.rs  lib.rs  sync.rs  vault_id.rs
crates/lpm-workspace/: Cargo.toml
crates/lpm-workspace/src/: lib.rs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: core.rs  output_parity.rs
tests/workflows/: Cargo.toml
tests/workflows/src/: lib.rs
tests/workflows/tests/: auth_lifecycle.rs  env_vault.rs  install.rs  install_offline_capability_roundtrip.rs  json_output.rs  migrate.rs  publish.rs  run.rs  swift.rs
(+257 files in other folders)
