[workspace]
resolver = "2"
members = [
    "crates/lpm-cli",
    "crates/lpm-common",
    "crates/lpm-semver",
    "crates/lpm-registry",
    "crates/lpm-resolver",
    "crates/lpm-store",
    "crates/lpm-linker",
    "crates/lpm-lockfile",
    "crates/lpm-extractor",
    "crates/lpm-workspace",
    "crates/lpm-security",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/AmanKishore/lpm"

[workspace.dependencies]
# Internal crates
lpm-common = { path = "crates/lpm-common" }
lpm-semver = { path = "crates/lpm-semver" }
lpm-registry = { path = "crates/lpm-registry" }
lpm-resolver = { path = "crates/lpm-resolver" }
lpm-store = { path = "crates/lpm-store" }
lpm-linker = { path = "crates/lpm-linker" }
lpm-lockfile = { path = "crates/lpm-lockfile" }
lpm-extractor = { path = "crates/lpm-extractor" }
lpm-workspace = { path = "crates/lpm-workspace" }
lpm-security = { path = "crates/lpm-security" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Hashing
sha2 = "0.10"
base64 = "0.22"

# Semver
node-semver = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error display
miette = { version = "7", features = ["fancy"] }

# Terminal
owo-colors = "4"
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Resolution
pubgrub = "0.3"
version-ranges = "0.1"

# Lockfile
toml = "0.8"
memmap2 = "0.9"

# Auth / secure storage
keyring = "3"
aes-gcm = "0.10"
scrypt = "0.11"
rand = "0.8"
dirs = "6"

# Interactive prompts
dialoguer = "0.11"

# Browser open
open = "5"

# Tarball creation (publish)
tar = "0.4"
flate2 = "0.2"
sha1 = "0.10"
glob = "0.3"
ignore = "0.4"
urlencoding = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
