[workspace]
resolver = "2"
members = [
    "crates/lpm-cli",
    "crates/lpm-common",
    "crates/lpm-semver",
    "crates/lpm-registry",
    "crates/lpm-resolver",
    "crates/lpm-store",
    "crates/lpm-linker",
    "crates/lpm-lockfile",
    "crates/lpm-extractor",
    "crates/lpm-workspace",
    "crates/lpm-security",
    "crates/lpm-runner",
    "crates/lpm-runtime",
    "crates/lpm-task",
    "crates/lpm-plugin",
    "crates/lpm-vault",
    "crates/lpm-cert",
    "crates/lpm-network",
    "crates/lpm-tunnel",
    "crates/lpm-dashboard",
    "crates/lpm-inspect",
    "crates/lpm-migrate",
    "crates/lpm-env",
    "tests/integration",
    "tests/workflows",
]

[workspace.package]
version = "0.11.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lpm-dev/rust-client"

[workspace.dependencies]
# Internal crates
lpm-common = { path = "crates/lpm-common" }
lpm-semver = { path = "crates/lpm-semver" }
lpm-registry = { path = "crates/lpm-registry" }
lpm-resolver = { path = "crates/lpm-resolver" }
lpm-store = { path = "crates/lpm-store" }
lpm-linker = { path = "crates/lpm-linker" }
lpm-lockfile = { path = "crates/lpm-lockfile" }
lpm-extractor = { path = "crates/lpm-extractor" }
lpm-workspace = { path = "crates/lpm-workspace" }
lpm-security = { path = "crates/lpm-security" }
lpm-runner = { path = "crates/lpm-runner" }
lpm-runtime = { path = "crates/lpm-runtime" }
lpm-task = { path = "crates/lpm-task" }
lpm-plugin = { path = "crates/lpm-plugin" }
lpm-vault = { path = "crates/lpm-vault" }
lpm-cert = { path = "crates/lpm-cert" }
lpm-network = { path = "crates/lpm-network" }
lpm-tunnel = { path = "crates/lpm-tunnel" }
lpm-dashboard = { path = "crates/lpm-dashboard" }
lpm-inspect = { path = "crates/lpm-inspect" }
lpm-migrate = { path = "crates/lpm-migrate" }
lpm-env = { path = "crates/lpm-env" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# Error handling
thiserror = "2"

# Hashing & crypto
sha2 = "0.10"
base64 = "0.22"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
hmac = "0.12"

# Semver
node-semver = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error display
miette = { version = "7", features = ["fancy"] }

# Terminal
owo-colors = "4"
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parallelism
rayon = "1"

# Resolution
pubgrub = "0.3"
version-ranges = "0.1"

# Lockfile
toml = "0.8"
memmap2 = "0.9"

# Auth / secure storage
keyring = "3"
aes-gcm = "0.10"
scrypt = "0.11"
rand = "0.8"
dirs = "6"
secrecy = "0.10"
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
ecdsa = { version = "0.16", features = ["signing", "verifying", "der"] }

# Interactive prompts & terminal UI
cliclack = "0.3"

# Browser open
open = "5"

# Tarball creation (publish) + plugin ZIP support
tar = "0.4"
flate2 = "0.2"
zip = "2"
sha1 = "0.10"
glob = "0.3"
ignore = "0.4"
urlencoding = "2"
strsim = "0.11"
futures = "0.3"
pathdiff = "0.2"
signal-hook = "0.3"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rmp-serde = "1"
filetime = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
