[package]
name = "lpm-cert"
description = "Local HTTPS certificate generation and trust store management for LPM"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lpm-common = { workspace = true }
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
x509-parser = "0.16"
pem = "3"
time = { version = "0.3", features = ["formatting", "parsing"] }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
