[package]
name = "lpm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI entry point for the LPM Rust client"

[[bin]]
name = "lpm-rs"
path = "src/main.rs"

[dependencies]
lpm-common = { workspace = true }
lpm-auth = { workspace = true }
lpm-env = { workspace = true }
lpm-global = { workspace = true }
lpm-semver = { workspace = true }
lpm-registry = { workspace = true }
lpm-extractor = { workspace = true }
lpm-resolver = { workspace = true }
lpm-store = { workspace = true }
lpm-linker = { workspace = true }
lpm-lockfile = { workspace = true }
lpm-workspace = { workspace = true }
lpm-security = { workspace = true }
lpm-runner = { workspace = true }
lpm-runtime = { workspace = true }
lpm-task = { workspace = true }
lpm-plugin = { workspace = true }
lpm-vault = { workspace = true }
lpm-cert = { workspace = true }
lpm-network = { workspace = true }
lpm-tunnel = { workspace = true }
lpm-inspect = { workspace = true }
lpm-dashboard = { workspace = true }
lpm-migrate = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true }
owo-colors = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Auth / secure storage
keyring = { workspace = true }
aes-gcm = { workspace = true }
scrypt = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }

# Interactive prompts & terminal UI
cliclack = { workspace = true }
gag = "1"

# Browser open
open = { workspace = true }

# Hashing
sha1 = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }

# Config
toml = { workspace = true }

# Tarball creation
tar = { workspace = true }
flate2 = { workspace = true }

# File collection
glob = { workspace = true }

# URL encoding
urlencoding = "2"

# Temp directories
tempfile = "3"

# Phase 32 Phase 6: `lpm patch` — unified diff generation + strict apply.
diffy = { workspace = true }

# Async utilities
futures = { workspace = true }

# Sigstore provenance (Phase C)
p256 = { workspace = true }
ecdsa = { workspace = true }

# Unix process group management (build.rs timeout kill)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
wiremock = "0.6"
