[package]
name = "lpm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI entry point for the LPM Rust client"

[[bin]]
name = "lpm-rs"
path = "src/main.rs"

[dependencies]
lpm-common = { workspace = true }
lpm-auth = { workspace = true }
lpm-env = { workspace = true }
lpm-global = { workspace = true }
lpm-semver = { workspace = true }
lpm-registry = { workspace = true }
lpm-extractor = { workspace = true }
lpm-resolver = { workspace = true }
dashmap = { workspace = true }
lpm-store = { workspace = true }
lpm-linker = { workspace = true }
lpm-lockfile = { workspace = true }
lpm-workspace = { workspace = true }
lpm-security = { workspace = true }
lpm-sandbox = { workspace = true }
lpm-runner = { workspace = true }
lpm-runtime = { workspace = true }
lpm-task = { workspace = true }
lpm-plugin = { workspace = true }
lpm-vault = { workspace = true }
lpm-cert = { workspace = true }
lpm-network = { workspace = true }
lpm-tunnel = { workspace = true }
lpm-inspect = { workspace = true }
lpm-dashboard = { workspace = true }
lpm-migrate = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true }
owo-colors = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Auth / secure storage
keyring = { workspace = true }
aes-gcm = { workspace = true }
scrypt = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }

# Interactive prompts & terminal UI
cliclack = { workspace = true }
gag = "1"

# Browser open
open = { workspace = true }

# Hashing
sha1 = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }

# Config
toml = { workspace = true }

# Tarball creation
tar = { workspace = true }
flate2 = { workspace = true }

# File collection
glob = { workspace = true }

# URL encoding
urlencoding = "2"

# Temp directories
tempfile = "3"

# Phase 32 Phase 6: `lpm patch` — unified diff generation + strict apply.
diffy = { workspace = true }

# Async utilities
futures = { workspace = true }

# Parallelism — W1: parallelize per-package post-install walk in
# `build_state::compute_blocked_packages_with_metadata`.
rayon = { workspace = true }

# Sigstore provenance (Phase C)
p256 = { workspace = true }
ecdsa = { workspace = true }

# Phase 46 P4: x509 cert parsing for Sigstore attestation SAN extraction
# (identity-only, not full Sigstore verification — see plan §7.1 / D5).
x509-parser = "0.16"

# Unix process group management (build.rs timeout kill)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
wiremock = "0.6"

# Phase 46 P4 Chunk 2: generate synthetic x509 certs with URI SANs in
# unit tests so the SAN-extractor is exercised against deterministic
# inputs. Same version as lpm-cert already uses.
rcgen = { version = "0.13", features = ["pem"] }
