[package]
name = "lpm-common"
version.workspace = true
edition.workspace = true
description = "Shared types, errors, and constants for the LPM Rust client"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
