[package]
name = "lpm-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types, errors, and constants for the LPM Rust client"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
miette = { workspace = true }
dirs = { workspace = true }
fd-lock = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"
