[package]
name = "lpm-dashboard"
description = "TUI dashboard for LPM dev server — multi-service log viewer with status indicators"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lpm-common = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
