[package]
name = "lpm-env"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Environment variable schema validation for LPM — fail-fast before process spawn"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
