[package]
name = "lpm-extractor"
version.workspace = true
edition.workspace = true
description = "Tarball download, verification, decompression, and extraction for LPM"

[dependencies]
lpm-common = { workspace = true }
flate2 = "1"
tar = "0.4"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
