[package]
name = "lpm-extractor"
version.workspace = true
edition.workspace = true
description = "Tarball download, verification, decompression, and extraction for LPM"

[dependencies]
lpm-common = { workspace = true }
flate2 = { version = "1", features = ["zlib-rs"], default-features = false }
tar = "0.4"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
