[package]
name = "lpm-linker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "node_modules layout manager (symlink/hoist) for LPM"

[dependencies]
lpm-common = { workspace = true }
lpm-workspace = { workspace = true }
pathdiff = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
