[package]
name = "lpm-lockfile"
version.workspace = true
edition.workspace = true
description = "TOML lockfile read/write for LPM"

[dependencies]
lpm-common = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
