[package]
name = "lpm-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lpm-lockfile.workspace = true
lpm-common.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
glob = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
