[package]
name = "lpm-network"
description = "Network interface discovery, QR code generation, and mDNS for LPM dev runner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lpm-common = { workspace = true }
if-addrs = "0.13"
qrcode = "0.14"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
# crossterm for terminal size detection
crossterm = "0.28"

[target.'cfg(windows)'.dependencies]
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
