[package]
name = "lpm-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP client for the LPM package registry"

[dependencies]
lpm-common = { workspace = true }
lpm-auth = { workspace = true }
lpm-semver = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
urlencoding = "2"
tracing = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
rmp-serde = { workspace = true }
filetime = { workspace = true }
secrecy = { workspace = true }
dirs = { workspace = true }
tempfile = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
wiremock = "0.6"
rcgen = "0.13"
# Phase 58.1 day-4: hand-rolled TLS test server for the cafile/strict-ssl
# 12-cell integration matrix. Versions match the transitive deps reqwest
# brings in (tokio-rustls 0.26 / rustls 0.23) so we don't fork the
# trust-store impl.
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
time = "0.3"
