[package]
name = "lpm-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PubGrub-based dependency resolution for LPM"

[dependencies]
lpm-common = { workspace = true }
lpm-semver = { workspace = true }
lpm-registry = { workspace = true }
pubgrub = { workspace = true }
version-ranges = { workspace = true }
thiserror = { workspace = true }
node-semver = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
