[package]
name = "lpm-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Script execution engine for LPM — PATH injection, pre/post hooks, exec, dlx"

[dependencies]
lpm-common = { workspace = true }
lpm-workspace = { path = "../lpm-workspace" }
lpm-runtime = { path = "../lpm-runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
