[package]
name = "lpm-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime version management for LPM — download, install, and auto-switch Node.js versions"

[dependencies]
lpm-common = { workspace = true }
lpm-semver = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
indicatif = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = "3"
