[package]
name = "lpm-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Filesystem-scoped post-install script sandboxing for LPM (Phase 46 P5)"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
dirs = { workspace = true }
