[package]
name = "lpm-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Filesystem-scoped post-install script sandboxing for LPM (Phase 46 P5)"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

# Phase 46 P5 Chunk 3: filesystem sandboxing via landlock on Linux
# kernel 5.13+. Linux-target-gated so the macOS + Windows builds stay
# unaffected. The crate is MIT-licensed, zero transitive C deps.
# `libc` is needed for async-signal-safe primitives in the child's
# `pre_exec` closure (direct `write(2)` for stderr + raw errno
# values) — std::io's stderr path takes a lock and isn't safe
# post-fork in multi-threaded processes.
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
dirs = { workspace = true }
criterion = "0.5"

# Phase 46 P5 Chunk 5: per-spawn sandbox overhead. Establishes the
# baseline before Chunk 6+ auto-execution lands; regressions in
# profile rendering or syscall overhead surface here.
[[bench]]
name = "sandbox_spawn"
harness = false
