[package]
name = "lpm-security"
version.workspace = true
edition.workspace = true
description = "Security auditing, provenance verification, and trust policies for LPM"

[dependencies]
lpm-common = { workspace = true }
lpm-workspace = { path = "../lpm-workspace" }
serde_json = { workspace = true }
strsim = { workspace = true }
regex = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
