[package]
name = "lpm-store"
version.workspace = true
edition.workspace = true
description = "Content-addressable package store for LPM"

[dependencies]
lpm-common = { workspace = true }
lpm-extractor = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
flate2 = "1"
tar = "0.4"
