[package]
name = "lpm-task"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Task graph, caching, and workspace-aware execution for LPM"

[dependencies]
lpm-common = { workspace = true }
lpm-workspace = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
globset = "0.4"
ignore = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
dirs = { workspace = true }
glob = { workspace = true }
notify = "7"

[dev-dependencies]
tempfile = "3"
