[package]
name = "lpm-tunnel"
description = "WebSocket tunnel client for exposing localhost to the internet via LPM"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lpm-common = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
futures-util = "0.3"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
