[package]
name = "lpm-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Keychain-backed secret storage for LPM projects"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

# Encryption
aes-gcm = { workspace = true }
scrypt = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
x25519-dalek = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }

# Secure storage
keyring = { workspace = true }
hex = { workspace = true }

# HTTP (for sync)
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
