[package]
name = "lpm-workspace"
version.workspace = true
edition.workspace = true
description = "Monorepo/workspace discovery and filtering for LPM"

[dependencies]
lpm-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
glob = "0.3"

[dev-dependencies]
tempfile = "3"
